crates/reap-okx-live-adapter/tests/ui/observe_roles_no_mutation_authority.stderr
error[E0599]: no method named `execution` found for reference `&ObserveRoles` in the current scope
 --> tests/ui/observe_roles_no_mutation_authority.rs:4:21
  |
4 |     let _ = observe.execution();
  |                     ^^^^^^^^^ method not found in `&ObserveRoles`

error[E0599]: no method named `safety` found for reference `&ObserveRoles` in the current scope
 --> tests/ui/observe_roles_no_mutation_authority.rs:5:21
  |
5 |     let _ = observe.safety();
  |                     ^^^^^^ method not found in `&ObserveRoles`

error[E0599]: no method named `regular_order_sessions` found for reference `&ObserveRoles` in the current scope
 --> tests/ui/observe_roles_no_mutation_authority.rs:6:21
  |
6 |     let _ = observe.regular_order_sessions();
  |                     ^^^^^^^^^^^^^^^^^^^^^^ method not found in `&ObserveRoles`
