crates/reap-okx-live-adapter/tests/ui/observe_roles_no_mutation_authority.rs
use reap_okx_live_adapter::ObserveRoles;

fn escalate(observe: &ObserveRoles) {
    let _ = observe.execution();
    let _ = observe.safety();
    let _ = observe.regular_order_sessions();
}

fn main() {}
